--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Wait Time Map</h1>
     </header>
+    <div id="markers"></div>
     <main>
         <div id="map"></div>
         <aside id="controls"></aside>
